--- a/01-Layout/03-layout-lab-avanzado/package.json
+++ b/01-Layout/03-layout-lab-avanzado/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cssnano": "^4.1.10",
+    "cssnano": "^7.0.7",
     "sass": "^1.26.5"
   }
 }
